@@ -241,18 +241,19 @@ public class HitecX1RedGathererThread extends Thread {
 		String processBatteryTypeName = this.device.getProcessingBatteryTypeName(channelBuffer);
 
 		//firmware 1.07 energy needs to be calculated
-		if (this.device.resetEnergy[number-1] != device.getProcessSubType(channelBuffer, dataBuffer) || device.getProcessSubType(channelBuffer, dataBuffer) == 2)
-			if (device.getProcessSubType(channelBuffer, dataBuffer) == 2)
+		int processSubType = device.getProcessSubType(channelBuffer, dataBuffer);
+		if (this.device.resetEnergy[number-1] != processSubType || processSubType == 2)
+			if (processSubType == 2)
 				dataBuffer[0] = -1; //keep energy
 			else
 				dataBuffer[0] = 1;  //reset energy
 		else
 			dataBuffer[0] = 0;	//add up energy		
-		this.device.resetEnergy[number-1] = device.getProcessSubType(channelBuffer, dataBuffer);
+		this.device.resetEnergy[number-1] = processSubType;
 
-		if (HitecX1RedGathererThread.log.isLoggable(Level.FINE)) {
+		if (HitecX1RedGathererThread.log.isLoggable(Level.FINE)) 
 			HitecX1RedGathererThread.log.log(Level.FINE, String.format("process = %s ; subProcess = %s", processTypeName, processSubTypeName));
-		}
+		
 		Channel channel = this.channels.get(number);
 		if (channel != null) {
 			// check if a record set matching for re-use is available and prepare a new if required
